# Simulated_Scepter

./: .gitignore  README.md  README_CHT.md  README_ENG.md  align_angle.py  diver.py  importing.py  iron_blood.py  load_new_ui.py  load_ui.py  logger_printer.py  new_gui.py  pyproject.toml  requirements.txt  route.py  simul.py
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.md  question.yml
actions/: character.json  insect.json  universe.json  universite.json
config/: EXTRA.py  GLOBAL.py  Global.py
config/config/: event_info.yml  settings.json  settings_example.json
resource/models/: Origin.onnx
resource/ui/: UI.ui
test/: aim.py  blank_test.ipynb  bw_map.py  get_blank.py  image_calculator.py  mask_img.py  move_by_text.py  ocr_num.py  ocr_skill_num.ipynb  ocr_skill_num.py  pos_demo.ipynb  simple_match_demo.py  t_get_direct.py  test_map_image_preprocess.py  test_minimap_detection.py  test_multi_target_match.py  test_rd.py  update_pos.py
tool/: EXTRA.py  GLOBAL.py  key_mouse_manager.py  log.py  screenshot.py  thread.py  timer.py  window_recorder.py
tool/diver/: config.py  keyops.py  ocr.py  utils.py
tool/onnxocr/: predict_base.py  utils.py
tool/scripts/: createicon.py
tool/simul/: cleaner.py  config.py  find_duplicate_map.py  keyops.py  map_log.py  ocr.py  text_key.py  utils.py
tool/utils/: Error.py  analysis_map.py  get_win_rect.py  image_tool.py  tool.py  (+4 more)
ui/: ADA.ui  UI.ui
utils/: key_mouse_manager.py  log.py  public_ocr.py  screenshot.py  thread.py  timer.py  window_recorder.py
(+18 files in other folders)
