[project]
name = "auto-difficult-achievement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "keyboard>=0.13.5",
    "onnxruntime-directml==1.20.1",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pyautogui>=0.9.54",
    "pyclipper>=1.4.0",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
    "pytz>=2026.1.post1",
    "pyuac>=0.0.3",
    "pywin32>=311",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
